# aws-sre-autopilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
chaos-scripts/: chaos_master.py
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/static/: index.html
dashboard/static/css/: styles.css
dashboard/static/js/: app.js
docs/: API.md  RUNBOOK.md  SLO.md  TROUBLESHOOTING.md
docs/architecture-decisions/: ADR-001-approval-mode.md
infra/: cw-agent-config.json  main.tf  terraform.tfvars.example  tfplan  variables.tf
scripts/: build-lambda.py  build-lambda.sh  clean-infra-artifacts.sh
sre-brain/: handler.py
tests/: conftest.py  test_chaos_master.py  test_dashboard_api.py  test_handler.py  test_vm_image.py
vm-image/: app.py  user_data.sh
